deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobsight-app-service
  namespace: wizeworks
  labels:
    app: jobsight-app
spec:
  selector:
    app: jobsight-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
