deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobsight-app-ingress
  namespace: wizeworks
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: wizeworks-encrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.jobsight.co
      secretName: jobsight-app-tls
  rules:
    - host: app.jobsight.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jobsight-app-service
                port:
                  number: 80
